--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ buildNumber.properties
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,maven
+/allure-results/
